--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{wang2019heterogeneous,
+  title={Heterogeneous attributed network embedding with graph convolutional networks},
+  author={Wang, Yueyang and Duan, Ziheng and Liao, Binbing and Wu, Fei and Zhuang, Yueting},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={33},
+  number={01},
+  pages={10061--10062},
+  year={2019}
 }
