--- a/content/publication/connecting-latent-relationships-over-heterogeneous-attributed-network-for-recommendation/cite.bib
+++ b/content/publication/connecting-latent-relationships-over-heterogeneous-attributed-network-for-recommendation/cite.bib
@@ -1,6 +1,8 @@
-@article{duan2021connecting,
-  title={Connecting Latent ReLationships over Heterogeneous Attributed Network for Recommendation},
-  author={Duan, Ziheng and Wang, Yueyang and Ye, Weihao and Feng, Zixuan and Fan, Qilin and Li, Xiuhua},
-  journal={arXiv preprint arXiv:2103.05749},
-  year={2021}
+@article{duan2022connecting,
+  title={Connecting latent relationships over heterogeneous attributed network for recommendation},
+  author={Duan, Ziheng and Wang, Yueyang and Ye, Weihao and Fan, Qilin and Li, Xiuhua},
+  journal={Applied Intelligence},
+  pages={1--19},
+  year={2022},
+  publisher={Springer}
 }
