--- a/content/publication/multivariate-time-series-classification-with-hierarchical-variational-graph-pooling/cite.bib
+++ b/content/publication/multivariate-time-series-classification-with-hierarchical-variational-graph-pooling/cite.bib
@@ -1,6 +1,9 @@
-@article{xu2020multivariate,
-  title={Multivariate Time Series Classification with Hierarchical Variational Graph Pooling},
-  author={Xu, Haoyan and Duan, Ziheng and Bai, Yunsheng and Huang, Yida and Ren, Anni and Yu, Qianru and Zhang, Qianru and Wang, Yueyang and Wang, Xiaoqian and Sun, Yizhou and others},
-  journal={arXiv preprint arXiv:2010.05649},
-  year={2020}
+@article{duan2022multivariate,
+  title={Multivariate time-series classification with hierarchical variational graph pooling},
+  author={Duan, Ziheng and Xu, Haoyan and Wang, Yueyang and Huang, Yida and Ren, Anni and Xu, Zhongbin and Sun, Yizhou and Wang, Wei},
+  journal={Neural Networks},
+  volume={154},
+  pages={481--490},
+  year={2022},
+  publisher={Elsevier}
 }
