--- a/content/publication/multivariate-time-series-forecasting-with-transfer-entropy-graph/cite.bib
+++ b/content/publication/multivariate-time-series-forecasting-with-transfer-entropy-graph/cite.bib
@@ -1,6 +1,10 @@
-@article{xu2020multivariate,
-  title={Multivariate Time Series Forecasting Based on Causal Inference with Transfer Entropy and Graph Neural Network},
-  author={Xu, Haoyan and Huang, Yida and Duan, Ziheng and Feng, Jie and Song, Pengyu},
-  journal={arXiv preprint arXiv:2005.01185},
-  year={2020}
+@article{duan2022multivariate,
+  title={Multivariate Time Series Forecasting with Transfer Entropy Graph},
+  author={Duan, Ziheng and Xu, Haoyan and Huang, Yida and Feng, Jie and Wang, Yueyang},
+  journal={Tsinghua Science and Technology},
+  volume={28},
+  number={1},
+  pages={141--149},
+  year={2022},
+  publisher={TUP}
 }
